Todo el apartado de foros funcionando correctamente con el usuario

--- a/src/main/resources/templates/listarForosView.qute.html
+++ b/src/main/resources/templates/listarForosView.qute.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
-{!<head>!}
-    {!<meta charset="UTF-8">!}
-    {!<meta name="viewport" content="width=device-width, initial-scale=1.0">!}
-    {!<title>Listado de Foros</title>!}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Listado de Foros</title>
     <link rel="stylesheet" href="/css/forumStyle.css">
 </head>
 <body>
@@ -12,15 +12,15 @@
         <img src="/images/NutriCelia.png">
     </div>
     <nav>
-        <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Productos</a></li>
-            <li><a href="#">Mis Listas</a></li>
-        </ul>
+        <a href="HomePage.html">Inicio</a>
+        <a href="#">Productos</a>
+        <a href="BuyListScreens/ShoppingListListingPageV2.html">Mis Listas</a>
+        <a href="Recipe/ReceipeListPage.html">Recetas</a>
+        <a href="/foro/lista">Foros</a>
     </nav>
     <div class="user-profile">
         <img class="menu" src="/images/menu-icon.png">
-        <a href="../META-INF/resources/UserScreens/UserDataPage.html">
+        <a href="/UserScreens/UserDataPage.html">
             <button class="user-profile"><img src="/images/icon-user.png"></button>
         </a>
     </div>
